--- a/sherlockmidi/build.gradle
+++ b/sherlockmidi/build.gradle
@@ -2,6 +2,7 @@ apply plugin: 'com.android.library'
 
 android {
     namespace 'cn.sherlock.midi'
+    compileSdkVersion 34
 
     defaultConfig {
         minSdkVersion 15
